Updated polybar and neovim configs.

--- a/configs/polybar/.config/polybar/bspwm.cfg
+++ b/configs/polybar/.config/polybar/bspwm.cfg
@@ -47,8 +47,8 @@ module-margin-right = 0
 inherit = fonts
 
 modules-left = bspwm
-; modules-center = kernel
-modules-right = cpu volume-cherrry9 wireless-network battery-cherrry9 date-cherrry9 powermenu-cherrry9
+modules-center = kernel
+modules-right = cpu pkg volume-cherrry9 wireless-network battery-cherrry9 date-cherrry9 powermenu
 
 ; tray-detached = false
 ; tray-offset-x = 0
