--- a/configs/polybar/.config/polybar/modules/pkg.cfg
+++ b/configs/polybar/.config/polybar/modules/pkg.cfg
@@ -1,4 +1,4 @@
-[module/pkg-cherrry9]
+[module/pkg]
 type = custom/script
 format-foreground = ${colors.foreground}
 exec = ~/.config/polybar/scripts/pkg.sh
