--- a/configs/polybar/.config/polybar/modules/powermenu.cfg
+++ b/configs/polybar/.config/polybar/modules/powermenu.cfg
@@ -1,7 +1,7 @@
-[module/powermenu-cherrry9]
+[module/powermenu]
 type = custom/script
 exec = echo ""
 format-foreground = ${colors.secondary}
 format-background = ${colors.background-alt}
-click-left = dmenupower
+click-left = poweroff 
 format-padding = 1
