--- a/configs/neovim/.config/nvim/coc-settings.json
+++ b/configs/neovim/.config/nvim/coc-settings.json
@@ -7,19 +7,27 @@
     "html",
     "yaml",
     "json",
-    "python"
+    "python",
+    "cpp"
   ],
   // python config
   "python.linting.enabled": true,
   "python.linting.pylintEnabled": true,
-  "snippets.ultisnips.directories": ["UltiSnips", "~/.config/nvim/utils/snips"],
+  "snippets.ultisnips.directories": [
+    "UltiSnips",
+    "~/.config/nvim/utils/snips"
+  ],
   // explorer
-  "explorer.width": 30,
+  "explorer.width": 25,
   "explorer.icon.enableNerdfont": true,
-  "explorer.previewAction.onHover": true,
+  "explorer.previewAction.onHover": false,
   "explorer.keyMappings": {
-    "<cr>": ["expandable?", "expand", "open"],
+    "<cr>": [
+      "expandable?",
+      "expand",
+      "open"
+    ],
     "v": "open:vsplit"
-  }
+  },
+  "explorer.file.showHiddenFiles": true
 }
-
