--- a/configs/polybar/.config/polybar/config
+++ b/configs/polybar/.config/polybar/config
@@ -25,9 +25,9 @@ include-file = $HOME/.config/polybar/modules/bspwm.cfg
 include-file = $HOME/.config/polybar/modules/cpu.cfg
 ; include-file = $HOME/.config/polybar/modules/separator.cfg
 ; include-file = $HOME/.config/polybar/modules/mpd.cfg
-; include-file = $HOME/.config/polybar/modules/pkg.cfg
+include-file = $HOME/.config/polybar/modules/pkg.cfg
 include-file = $HOME/.config/polybar/modules/volume.cfg
-; include-file = $HOME/.config/polybar/modules/backlight.cfg
+include-file = $HOME/.config/polybar/modules/backlight.cfg
 include-file = $HOME/.config/polybar/modules/network.cfg
 include-file = $HOME/.config/polybar/modules/battery.cfg
 include-file = $HOME/.config/polybar/modules/date.cfg
