--- a/configs/polybar/.config/polybar/modules/network.cfg
+++ b/configs/polybar/.config/polybar/modules/network.cfg
@@ -43,25 +43,27 @@ interval = 1
 ; label-connected = %{F#84A0C6}直  %{F-}%essid%
 ; label-disconnected = %{F#84A0C6}睊 %{F-}disconnected
 
-label-connected = %essid%
+; label-connected = %essid%
+label-connected = "%{A1:st -c network -e networkhelper:} %{F#84A0C6}直  %{F-}%essid% %{A}"
 
 format-connected = <label-connected>
 ; format-connected = <ramp-signal> <label-connected>
 format-connected-foreground = ${colors.foreground}
 format-connected-background = ${colors.background}
-format-connected-prefix = "  "
+; format-connected-prefix = "  "
 format-connected-prefix-foreground = ${colors.secondary}
 format-connected-prefix-background = ${colors.background}
 ; format-connected-underline = #7e52c6
 
-label-disconnected = %ifname% disconnected
+label-disconnected = %{F#84A0C6}睊 %{F-}disconnected
+; label-disconnected = %ifname% disconnected
 label-disconnected-foreground = ${colors.alert}
 label-disconnected-background = ${colors.background}
 
 format-disconnected = <label-disconnected>
 format-disconnected-foreground = ${colors.alert}
 format-disconnected-background = ${colors.background}
-format-disconnected-prefix = "  "
+; format-disconnected-prefix = "  "
 format-disconnected-prefix-foreground = ${colors.alert}
 format-disconnected-prefix-background = ${colors.background}
 ; format-disconnected-underline =${colors.alert}
