--- a/configs/polybar/.config/polybar/modules/volume.cfg
+++ b/configs/polybar/.config/polybar/modules/volume.cfg
@@ -28,8 +28,8 @@ click-right = exec pavucontrol
 click-left = ~/.config/polybar/scripts/pavolume.sh --togmute
 scroll-up = ~/.config/polybar/scripts/pavolume.sh --up
 scroll-down = ~/.config/polybar/scripts/pavolume.sh --down
-format-underline = #3EC13F
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
+format-padding = 1
 
 ################################################################################
