--- a/configs/polybar/.config/polybar/modules/kernel.cfg
+++ b/configs/polybar/.config/polybar/modules/kernel.cfg
@@ -9,7 +9,8 @@ interval = 1024
 format-foreground = ${colors.foreground}
 format-background = ${colors.background}
 format-prefix = "  "
-format-prefix-foreground = #0084FF
-format-underline = #0084FF
+format-prefix-foreground =  ${colors.secondary}
+# format-underline = #0084FF
+format-prefix-padding = 1
 
 ################################################################################
