Improved neovim configuration and increased dpi.

--- a/configs/polybar/.config/polybar/bspwm.cfg
+++ b/configs/polybar/.config/polybar/bspwm.cfg
@@ -9,7 +9,7 @@ monitor = ${env:MONITOR}
 dpi = ${env:DPI}
 ;monitor-fallback = HDMI1
 width = 100%
-height = 2.5%
+height = 3%
 ;offset-x = 1%
 ;offset-y = 1%
 radius = 0.0
@@ -48,7 +48,7 @@ inherit = fonts
 
 modules-left = bspwm
 modules-center = kernel
-modules-right = cpu pkg volume-cherrry9 wireless-network battery-cherrry9 date-cherrry9 powermenu
+modules-right = cpu volume-cherrry9 wireless-network battery-cherrry9 date-cherrry9 powermenu
 
 ; tray-detached = false
 ; tray-offset-x = 0
