Added some file zsh output.

--- a/.gitignore
+++ b/.gitignore
@@ -402,3 +402,7 @@ zsh/.config/zsh/plugins/
 lazy-lock.json
 font/.local/share/fonts/.uuid
 ignored_dots/
+
+# zsh files
+.zsh_sessions/
+.zsh_history
