--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,6 +5,8 @@ bind-key C-a send-prefix
 
 # set colors
 set -g default-terminal "screen-256color"
+set -g status-bg "#2d3149"
+set -g status-fg white
 
 # set split window shortcuts
 unbind %
